test/fail/codegen_decorator_no_args.ms
@link()
unsafe extern "C" proc empty_args();
